client/src/pages/Login.css
* {
    margin: auto;
    padding: auto;
    /* overflow-x: hidden; */
}

.login__content form {
    
    /* width: 600px; */
    margin: 0 auto;
    /* height: 400px; */
    background-image: linear-gradient(to right, #5658d6, #7C35f5, #A79Cf8);
    /* box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75); */
    font-family: 'Trebuchet MS', sans-serif;
    font-weight: bold;
    border-radius: 25px;
}

/* form>h2 {
    text-align: center;
    margin-top: 40px;
    color: salmon;
} */

/* .margin {
    margin-left: 700px;
} */

/* .login__container {
    background-image: linear-gradient(to right, #5658d6, #7C35f5, #A79Cf8);
    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75)
} */

/* .float-container {
    border: 3px;
    padding: 20px;
} */

 /* .float-child-left {
    width: 130%;
    float: left;
    border: 2px;
    /* padding-right: 100px; */
 /*} 

/* .float-child-right {
    width: 50%;
    float: right;
    padding-top: 128px;
    border: 2px;
}  */

/* .logo {
    height: 50%;
    width: 50%;
} */

img {
    height: 70%;
    width: 70%;
    align-content: center;
}

.form-group {
    margin: auto;

    text-align: center;

    width: 60%;
    font-family: 'Trebuchet MS', sans-serif;
}

.form-control {
    padding: 8px;
    width: 280px;
    background-color:darkslategray;

}



.login__content button {
    display: block;
    margin: 40px auto;
    border-radius: 8px;
    height: 45px;
    color: whitesmoke;
    font-size: large;
    font-weight: bold;
    background-color:darkslategray;

}

.login__content input {
    width: 100%;
    border: 2px;
    border-radius: 8px;
    height: 40px;
    
}

.login__content ::placeholder {
    text-align: center;
    color:black;
    opacity: 50%;
    font-family: 'Trebuchet MS', sans-serif;
    font-weight: bold;
    font-size: large;
}

/* .login__content label {
    float: left;
    width: 10em;
    margin-right: 1em;
    font-size: large;
} */
/* 
.login__content p {
    text-align: center;
} */

.row {
    padding-top: 200px
}

.signup__btn {
    width: 280px;
    background-color: darkslategray;
    
    
    
}

@media screen and (max-width: 1000) {
    img {
        height: 80%;
        width: 80%;
        align-content: center;
    }
}
@media screen and (max-width: 770px) {
   
   .row {
       padding-top: 20px;
   }
}



   

   

